# calamum_vulcan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.agent_session/: inactivity_lock.json  metadata.json  ops_awareness.json  ops_awareness.md
.github/workflows/: python-publish.yml
calamum_vulcan/: __init__.py  launch_shell.py  requirements.txt  runtime_dependencies.py
calamum_vulcan/adapters/: __init__.py
calamum_vulcan/app/: __init__.py  __main__.py  demo.py  integration.py  qt_compat.py  qt_shell.py  style.py  view_models.py
calamum_vulcan/domain/: __init__.py
calamum_vulcan/fixtures/: __init__.py  heimdall_pit_fixtures.py  heimdall_process_fixtures.py  package_manifest_fixtures.py  state_scenarios.py
calamum_vulcan/usb/: __init__.py  scanner.py
calamum_vulcan/validation/: __init__.py  security.py
docs/: Samsung_Android_Flashing_Platform_0.1.0_Detailed_Planning.md  Samsung_Android_Flashing_Platform_0.1.0_Execution_Evidence.md  Samsung_Android_Flashing_Platform_0.5.0_Closeout_and_Prepackage_Checklist.md  Samsung_Android_Flashing_Platform_0.5.0_Detailed_Planning.md  Samsung_Android_Flashing_Platform_0.5.0_Execution_Evidence.md  Samsung_Android_Flashing_Platform_0.5.0_Execution_Surface.md  Samsung_Android_Flashing_Platform_0.5.0_Testing_and_Readiness_Plan.md  Samsung_Android_Flashing_Platform_Research_Report_and_Build_Plan.md
logs/behavioral/: search_history.jsonl
logs/metrics/: cache_stats.json  (+1 more)
scripts/: build_release_artifacts.py  prepare_sprint_5_scaffolding.py  prepare_sprint_5_scripts.py  readiness_reporting.py  run_empirical_review_stack.py  run_fs6_live_empirical_review.py  run_gui_latency_diagnostic.py  run_pit_transport_diagnostic.py  run_scripted_simulation_suite.py  run_security_validation_suite.py  run_testpypi_rehearsal.py  run_v040_readiness_stack.py  run_v040_timeline_audit.py  run_v050_readiness_stack.py  run_v050_timeline_audit.py  run_v060_alignment_audit.py  run_v060_readiness_stack.py  validate_installed_artifact.py
(+87 files in other folders)
